# Autonomy_Software

./: .clang-format  .clang-format-ignore  .deepsource.toml  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEBUG.md  Doxyfile  INSTALL.md  IncrementBuildNumbers.sh  README.md  SECURITY.md  codecov.yml  maybe.txt  old.txt  temp.txt  test.txt
.devcontainer/: .tf_configure.bazelrc  Dockerfile  Dockerfile_Focal  Dockerfile_Jammy  Dockerfile_JetPack  Dockerfile_JetPack5  Dockerfile_SelfHosted  Dockerfile_Ubuntu  Dockerfile_Ubuntu20  Dockerfile_Ubuntu22  devcontainer.json  install-cmake.sh  opencv_install_deps.sh  reinstall-cmake.sh  start.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  ENHANCEMENT.yml  bug_report.md  bug_report.yml  enhancement_request.md  enhancement_request.yml  package_upgrade.md  package_upgrade.yml  research_request.md  research_request.yml
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST.md
.github/workflows/: clang_check.yml  codeql.yml  coverage.yml  deploy_autonomy.yml  deploy_docker.yml  docker_jetpack.yml  docker_new.yml  docker_ubuntu.yml  doxygen_generate.yml  help_request.yml  help_requester.yml  sample.yml  tests.yml  unit-tests.yml  valgrind.yml
.vscode-OLD/: settings.json
data/: README.md
data/ASCII/: README.md  v24.txt  v25.txt
data/Cowsay_Cows/: README.md  icarus.cow  swoosh.cow
data/Custom_Dictionaries/: Autonomy-Dictionary.txt
data/README_Resources/: README.md
data/Spinning_Donut/: donut  donut.c
data/configs/: AutonomyConstants.json
data/models/: README.md
docs/: README.md
docs/Doxygen/: Autonomy__Globals_8cpp.html  Autonomy__Globals_8cpp__incl.dot  Autonomy__Globals_8h.html  Autonomy__Globals_8h__dep__incl.dot  Autonomy__Globals_8h__incl.dot  Autonomy__Globals_8h_source.html  Autonomy__IdentitySoftware_8cpp.html  Autonomy__IdentitySoftware_8cpp__incl.dot  Autonomy__IdentitySoftware_8h.html  Autonomy__IdentitySoftware_8h__dep__incl.dot  Autonomy__IdentitySoftware_8h__incl.dot  Autonomy__IdentitySoftware_8h_source.html  DriveBoard_8cpp.html  DriveBoard_8cpp__incl.dot  DriveBoard_8h.html  DriveBoard_8h__dep__incl.dot  DriveBoard_8h__incl.dot  DriveBoard_8h_source.html  MultimediaBoard_8cpp.html  MultimediaBoard_8cpp__incl.dot  MultimediaBoard_8h.html  MultimediaBoard_8h__dep__incl.dot  MultimediaBoard_8h_source.html  NavigationBoard_8cpp.html  NavigationBoard_8cpp__incl.dot  NavigationBoard_8h.html  NavigationBoard_8h__dep__incl.dot  NavigationBoard_8h__incl.dot  NavigationBoard_8h_source.html  NumberOperations_8hpp.html  NumberOperations_8hpp__dep__incl.dot  NumberOperations_8hpp__incl.dot  NumberOperations_8hpp_source.html  README.md  annotated.html  aruco__samples__utility_8hpp_source.html  classAutonomy__IdentitySoftware-members.html  classAutonomy__IdentitySoftware.html  classDriveBoard-members.html  classDriveBoard.html  (+63 more)
examples/: README.md
examples/OpenCV/: TagGenerator.hpp  Tag_Generator.cpp  Tag_Generator.h
examples/opencv/: TagGenerator.hpp
examples/threading/: ArucoGenerateTags.hpp  PrimeNumbers.hpp  README.md
examples/vision/: OpenBasicCam.hpp  OpenZEDCam.hpp
src/: AutonomyConstants.h  AutonomyGlobals.cpp  AutonomyGlobals.h  AutonomyLogging.cpp  AutonomyLogging.h  AutonomyNetworking.cpp  AutonomyNetworking.h  Autonomy_Globals.cpp  Autonomy_Globals.h  Autonomy_IdentitySoftware.cpp  Autonomy_IdentitySoftware.h  Consts.h  IdentitySoftware.cpp  IdentitySoftware.h  README.md  main.cpp
src/algorithms/: AStar.h  DifferentialDrive.hpp  Node.h  README.md  SearchPattern.hpp
src/drivers/: DriveBoard.cpp  DriveBoard.h  MultimediaBoard.cpp  MultimediaBoard.h  NavigationBoard.cpp  NavigationBoard.h  README.md
src/handlers/: CameraHandler.cpp  CameraHandler.h  ObjectDetectionHandler.cpp  ObjectDetectionHandler.h  README.md  RecordingHandler.cpp  RecordingHandler.h  StateMachineHandler.cpp  StateMachineHandler.h  TagDetectionHandler.cpp  TagDetectionHandler.h  WaypointHandler.cpp  WaypointHandler.h
src/interfaces/: AutonomyState.hpp  AutonomyThread.h  AutonomyThread.hpp  AutonomyThreading.hpp  Camera.hpp  DriveBoard.cpp  DriveBoard.h  MultimediaBoard.cpp  MultimediaBoard.h  NavigationBoard.cpp  NavigationBoard.h  README.md  State.hpp  StateMachine.cpp  StateMachine.h  StateMachine.hpp  TensorflowTPU.hpp  TorchModel.cpp  TorchModel.h  TorchModel.hpp
src/states/: AbortState.cpp  AbortState.hpp  ApproachingGateState.cpp  ApproachingGateState.hpp  ApproachingMarkerState.cpp  ApproachingMarkerState.h  ApproachingMarkerState.hpp  ApproachingObjectState.cpp  ApproachingObjectState.h  ApproachingObjectState.hpp  AvoidanceState.cpp  AvoidanceState.h  AvoidanceState.hpp  ClimbState.cpp  CrashedState.cpp  DecendState.cpp  IdleState.cpp  IdleState.h  IdleState.hpp  LandingState.cpp  NavigatingState.cpp  NavigatingState.h  NavigatingState.hpp  NavigationState.cpp  NavigationState.hpp  README.md  ReverseState.cpp  ReverseState.hpp  ReversingState.cpp  ReversingState.h  ReversingState.hpp  SearchPatternState.cpp  SearchPatternState.h  SearchPatternState.hpp  StateMachine.hpp  StuckState.cpp  StuckState.h  StuckState.hpp  TakeoffState.cpp  VerifyingMarkerState.cpp  (+7 more)
src/threads/: CameraHandlerThread.cpp  CameraHandlerThread.h  README.md
src/util/: CClamp.cpp  CClamp.h  Clamp.cpp  Clamp.h  ExampleChecker.h  FPS.hpp  GeospatialOperations.hpp  IPS.hpp  NumberOperations.h  NumberOperations.hpp  README.md  aruco_samples_utility.hpp
src/vision/: Aruco.cpp  Aruco.h  BasicCam.cpp  BasicCam.h  README.md  ZEDCam.cpp  ZEDCam.h
temp/: abseil_20230802.1_amd64.deb  coco.names  cxxopts.hpp  detector.cpp  detector.h  flatbuffers_2.13.1_amd64.deb  libedgetpu_2.13.1_amd64.deb  main.cpp  utils.h
tests/: Example.cc  README.md  aruco_samples_utility.hpp  opencv_test.cpp  opencv_test.h  opencv_test.hpp
tests/Integration/: README.md  main.cc
tests/Unit/: README.md  main.cc
tools/: README.md  install_host_deps.sh  log_playback.py  set_static_ip.sh  toggle_cowsay.sh
tools/action-runners/: Dockerfile_AMD64  Dockerfile_ARM64  (+6 more)
(+262 files in other folders)
